[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gemini-media"
version = "0.1.0"
description = "Multimodal media analysis and image generation via Google Gemini"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
dependencies = [
    "google-genai>=1.0",
    "google-cloud-storage>=2.0",
    "fastmcp>=2.0",
]

[project.scripts]
gemini-media = "gemini_media.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/gemini_media"]
